test/files/neg/t3663.check
main.scala:11: error: variable foo in class PackageProtected cannot be accessed as a member of test.Test from object Main in package another
      println(t.foo)
                ^
1 error
